# agentsre

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
agentsre/: CHANGELOG.md  CONTRIBUTING.md  FINTECH_ORCHESTRATION.md  LICENSE  __init__.py  aos_reliability.py  automation_complacency.py  cloudwatch.py  dependency_risk.py  deployment_governance.py  eval_pipeline.py  pre_action_gate.py  pyproject.toml  reasoning_trace.py  tool_evaluation.py  validators.py
agentsre/.github/workflows/: tests.yml
agentsre/agentsre/: metrics.py
agentsre/budgets/: __init__.py  context_budget.py  token_budget.py
agentsre/control_plane/: _init_.py
agentsre/cost_optimizer/: __init__.py  alerts.py  optimizer.py  tracker.py
agentsre/orchestration/: __init__.py  orchestrator.py
agentsre/sprawl/: circuit_breaker.py  metrics.py
agentsre/tests/: __init__.py  test_metrics.py
examples/: fintech_payment_orchestration.py  langchain_agent.py  quickstart.py  v0_4_0_integration_with_existing_code.py  v0_5_0_cost_optimizer_example.py  v0_6_0_cost_optimizer_example.py
examples/sprawl/: __init__.py  agent_sprawl_example.py  framework_governance.py  inventory.py
tests/: test_agentsre.py
