[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsre"
version = "0.5.0"
description = "SRE reliability instrumentation for agentic AI"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ajay Devineni", email = "ajay@candescent.ai"}
]
keywords = ["sre", "reliability", "ai", "agents", "monitoring", "observability"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = []

[project.optional-dependencies]
aws = ["boto3>=1.26.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/Ajay150313/agentsre"
Documentation = "https://github.com/Ajay150313/agentsre#readme"
Repository = "https://github.com/Ajay150313/agentsre.git"
Issues = "https://github.com/Ajay150313/agentsre/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentsre*"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=agentsre --cov-report=html"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
